molap/server/5.0/Library/Parser/RuleParser.output
Grammar

    0 $accept: rule "end of file"

    1 rule: destination "=" exp "end of file"
    2     | destination "=" CONS_FLAG exp "end of file"
    3     | destination "=" BASE_FLAG exp "end of file"
    4     | destination "=" BASE_FLAG exp '@' markers "end of file"
    5     | destination "=" exp '@' markers "end of file"

    6 exp: source
    7    | '-' source
    8    | marker
    9    | '-' marker
   10    | "integer"
   11    | "double"
   12    | '+' "integer"
   13    | '+' "double"
   14    | '-' "integer"
   15    | '-' "double"
   16    | "string"
   17    | "variable_string"
   18    | exp '+' exp
   19    | exp '-' exp
   20    | exp '*' exp
   21    | exp '/' exp
   22    | exp GE exp
   23    | exp LE exp
   24    | exp EQ exp
   25    | exp NE exp
   26    | exp GT exp
   27    | exp LT exp
   28    | '-' '(' exp ')'
   29    | '(' exp ')'
   30    | '-' "function" parameters ')'
   31    | "function" parameters ')'

   32 parameters: '(' exp
   33           | '('
   34           | parameters ',' exp

   35 destination: elements ']'
   36            | elementsIds '}'

   37 source: elements ']'
   38       | elementsIds '}'

   39 markers: marker
   40        | "function" parameters ')'
   41        | markers ',' marker
   42        | markers ',' "function" parameters ')'

   43 marker: markerElements MARKER_CLOSE
   44       | markerElementsIds SMARKER_CLOSE

   45 elements: '[' element
   46         | '['
   47         | elements ',' element
   48         | elements ','

   49 markerElements: MARKER_OPEN simpleElement
   50               | MARKER_OPEN
   51               | markerElements ',' simpleElement
   52               | markerElements ','

   53 simpleElement: "element_string"
   54              | "element_string" ':' "element_string"

   55 element: "element_string"
   56        | "element_string" ':' "element_string"
   57        | "element_string" ':' "function" '(' "integer" ')'
   58        | "element_string" ':' "function" '(' '+' "integer" ')'
   59        | "element_string" ':' "function" '(' '-' "integer" ')'

   60 elementsIds: '{' elementId
   61            | '{'
   62            | elementsIds ',' elementId
   63            | elementsIds ','

   64 markerElementsIds: SMARKER_OPEN simpleElementId
   65                  | SMARKER_OPEN
   66                  | markerElementsIds ',' simpleElementId
   67                  | markerElementsIds ','

   68 simpleElementId: "integer" ':' "integer"
   69                | "integer" '@' "integer"

   70 elementId: "integer" ':' "integer"
   71          | "integer" '@' "integer"
   72          | "integer" ':' "function" '(' "integer" ')'
   73          | "integer" ':' "function" '(' '+' "integer" ')'
   74          | "integer" ':' "function" '(' '-' "integer" ')'


Terminals, with rules where they appear

"end of file" (0) 0 1 2 3 4 5
'(' (40) 28 29 32 33 57 58 59 72 73 74
')' (41) 28 29 30 31 40 42 57 58 59 72 73 74
'*' (42) 20
'+' (43) 12 13 18 58 73
',' (44) 34 41 42 47 48 51 52 62 63 66 67
'-' (45) 7 9 14 15 19 28 30 59 74
'/' (47) 21
':' (58) 54 56 57 58 59 68 70 72 73 74
'@' (64) 4 5 69 71
'[' (91) 45 46
']' (93) 35 37
'{' (123) 60 61
'}' (125) 36 38
error (256)
"=" (258) 1 2 3 4 5
CONS_FLAG (259) 2
BASE_FLAG (260) 3 4
GE (261) 22
LE (262) 23
EQ (263) 24
NE (264) 25
GT (265) 26
LT (266) 27
MARKER_OPEN (267) 49 50
MARKER_CLOSE (268) 43
SMARKER_OPEN (269) 64 65
SMARKER_CLOSE (270) 44
"string" (271) 16
"element_string" (272) 53 54 55 56 57 58 59
"variable_string" (273) 17
"function" (274) 30 31 40 42 57 58 59 72 73 74
"integer" (275) 10 12 14 57 58 59 68 69 70 71 72 73 74
"double" (276) 11 13 15


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
rule (36)
    on left: 1 2 3 4 5, on right: 0
exp (37)
    on left: 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25
    26 27 28 29 30 31, on right: 1 2 3 4 5 18 19 20 21 22 23 24 25
    26 27 28 29 32 34
parameters (38)
    on left: 32 33 34, on right: 30 31 34 40 42
destination (39)
    on left: 35 36, on right: 1 2 3 4 5
source (40)
    on left: 37 38, on right: 6 7
markers (41)
    on left: 39 40 41 42, on right: 4 5 41 42
marker (42)
    on left: 43 44, on right: 8 9 39 41
elements (43)
    on left: 45 46 47 48, on right: 35 37 47 48
markerElements (44)
    on left: 49 50 51 52, on right: 43 51 52
simpleElement (45)
    on left: 53 54, on right: 49 51
element (46)
    on left: 55 56 57 58 59, on right: 45 47
elementsIds (47)
    on left: 60 61 62 63, on right: 36 38 62 63
markerElementsIds (48)
    on left: 64 65 66 67, on right: 44 66 67
simpleElementId (49)
    on left: 68 69, on right: 64 66
elementId (50)
    on left: 70 71 72 73 74, on right: 60 62


state 0

    0 $accept: . rule "end of file"
    1 rule: . destination "=" exp "end of file"
    2     | . destination "=" CONS_FLAG exp "end of file"
    3     | . destination "=" BASE_FLAG exp "end of file"
    4     | . destination "=" BASE_FLAG exp '@' markers "end of file"
    5     | . destination "=" exp '@' markers "end of file"
   35 destination: . elements ']'
   36            | . elementsIds '}'
   45 elements: . '[' element
   46         | . '['
   47         | . elements ',' element
   48         | . elements ','
   60 elementsIds: . '{' elementId
   61            | . '{'
   62            | . elementsIds ',' elementId
   63            | . elementsIds ','

    '['  shift, and go to state 1
    '{'  shift, and go to state 2

    rule         go to state 3
    destination  go to state 4
    elements     go to state 5
    elementsIds  go to state 6


state 1

   45 elements: '[' . element
   46         | '[' .  [',', ']']
   55 element: . "element_string"
   56        | . "element_string" ':' "element_string"
   57        | . "element_string" ':' "function" '(' "integer" ')'
   58        | . "element_string" ':' "function" '(' '+' "integer" ')'
   59        | . "element_string" ':' "function" '(' '-' "integer" ')'

    "element_string"  shift, and go to state 7

    $default  reduce using rule 46 (elements)

    element  go to state 8


state 2

   60 elementsIds: '{' . elementId
   61            | '{' .  [',', '}']
   70 elementId: . "integer" ':' "integer"
   71          | . "integer" '@' "integer"
   72          | . "integer" ':' "function" '(' "integer" ')'
   73          | . "integer" ':' "function" '(' '+' "integer" ')'
   74          | . "integer" ':' "function" '(' '-' "integer" ')'

    "integer"  shift, and go to state 9

    $default  reduce using rule 61 (elementsIds)

    elementId  go to state 10


state 3

    0 $accept: rule . "end of file"

    "end of file"  shift, and go to state 11


state 4

    1 rule: destination . "=" exp "end of file"
    2     | destination . "=" CONS_FLAG exp "end of file"
    3     | destination . "=" BASE_FLAG exp "end of file"
    4     | destination . "=" BASE_FLAG exp '@' markers "end of file"
    5     | destination . "=" exp '@' markers "end of file"

    "="  shift, and go to state 12


state 5

   35 destination: elements . ']'
   47 elements: elements . ',' element
   48         | elements . ','

    ','  shift, and go to state 13
    ']'  shift, and go to state 14


state 6

   36 destination: elementsIds . '}'
   62 elementsIds: elementsIds . ',' elementId
   63            | elementsIds . ','

    ','  shift, and go to state 15
    '}'  shift, and go to state 16


state 7

   55 element: "element_string" .  [',', ']']
   56        | "element_string" . ':' "element_string"
   57        | "element_string" . ':' "function" '(' "integer" ')'
   58        | "element_string" . ':' "function" '(' '+' "integer" ')'
   59        | "element_string" . ':' "function" '(' '-' "integer" ')'

    ':'  shift, and go to state 17

    $default  reduce using rule 55 (element)


state 8

   45 elements: '[' element .

    $default  reduce using rule 45 (elements)


state 9

   70 elementId: "integer" . ':' "integer"
   71          | "integer" . '@' "integer"
   72          | "integer" . ':' "function" '(' "integer" ')'
   73          | "integer" . ':' "function" '(' '+' "integer" ')'
   74          | "integer" . ':' "function" '(' '-' "integer" ')'

    '@'  shift, and go to state 18
    ':'  shift, and go to state 19


state 10

   60 elementsIds: '{' elementId .

    $default  reduce using rule 60 (elementsIds)


state 11

    0 $accept: rule "end of file" .

    $default  accept


state 12

    1 rule: destination "=" . exp "end of file"
    2     | destination "=" . CONS_FLAG exp "end of file"
    3     | destination "=" . BASE_FLAG exp "end of file"
    4     | destination "=" . BASE_FLAG exp '@' markers "end of file"
    5     | destination "=" . exp '@' markers "end of file"
    6 exp: . source
    7    | . '-' source
    8    | . marker
    9    | . '-' marker
   10    | . "integer"
   11    | . "double"
   12    | . '+' "integer"
   13    | . '+' "double"
   14    | . '-' "integer"
   15    | . '-' "double"
   16    | . "string"
   17    | . "variable_string"
   18    | . exp '+' exp
   19    | . exp '-' exp
   20    | . exp '*' exp
   21    | . exp '/' exp
   22    | . exp GE exp
   23    | . exp LE exp
   24    | . exp EQ exp
   25    | . exp NE exp
   26    | . exp GT exp
   27    | . exp LT exp
   28    | . '-' '(' exp ')'
   29    | . '(' exp ')'
   30    | . '-' "function" parameters ')'
   31    | . "function" parameters ')'
   37 source: . elements ']'
   38       | . elementsIds '}'
   43 marker: . markerElements MARKER_CLOSE
   44       | . markerElementsIds SMARKER_CLOSE
   45 elements: . '[' element
   46         | . '['
   47         | . elements ',' element
   48         | . elements ','
   49 markerElements: . MARKER_OPEN simpleElement
   50               | . MARKER_OPEN
   51               | . markerElements ',' simpleElement
   52               | . markerElements ','
   60 elementsIds: . '{' elementId
   61            | . '{'
   62            | . elementsIds ',' elementId
   63            | . elementsIds ','
   64 markerElementsIds: . SMARKER_OPEN simpleElementId
   65                  | . SMARKER_OPEN
   66                  | . markerElementsIds ',' simpleElementId
   67                  | . markerElementsIds ','

    CONS_FLAG          shift, and go to state 20
    BASE_FLAG          shift, and go to state 21
    MARKER_OPEN        shift, and go to state 22
    SMARKER_OPEN       shift, and go to state 23
    "string"           shift, and go to state 24
    "variable_string"  shift, and go to state 25
    "function"         shift, and go to state 26
    "integer"          shift, and go to state 27
    "double"           shift, and go to state 28
    '+'                shift, and go to state 29
    '-'                shift, and go to state 30
    '('                shift, and go to state 31
    '['                shift, and go to state 1
    '{'                shift, and go to state 2

    exp                go to state 32
    source             go to state 33
    marker             go to state 34
    elements           go to state 35
    markerElements     go to state 36
    elementsIds        go to state 37
    markerElementsIds  go to state 38


state 13

   47 elements: elements ',' . element
   48         | elements ',' .  [',', ']']
   55 element: . "element_string"
   56        | . "element_string" ':' "element_string"
   57        | . "element_string" ':' "function" '(' "integer" ')'
   58        | . "element_string" ':' "function" '(' '+' "integer" ')'
   59        | . "element_string" ':' "function" '(' '-' "integer" ')'

    "element_string"  shift, and go to state 7

    $default  reduce using rule 48 (elements)

    element  go to state 39


state 14

   35 destination: elements ']' .

    $default  reduce using rule 35 (destination)


state 15

   62 elementsIds: elementsIds ',' . elementId
   63            | elementsIds ',' .  [',', '}']
   70 elementId: . "integer" ':' "integer"
   71          | . "integer" '@' "integer"
   72          | . "integer" ':' "function" '(' "integer" ')'
   73          | . "integer" ':' "function" '(' '+' "integer" ')'
   74          | . "integer" ':' "function" '(' '-' "integer" ')'

    "integer"  shift, and go to state 9

    $default  reduce using rule 63 (elementsIds)

    elementId  go to state 40


state 16

   36 destination: elementsIds '}' .

    $default  reduce using rule 36 (destination)


state 17

   56 element: "element_string" ':' . "element_string"
   57        | "element_string" ':' . "function" '(' "integer" ')'
   58        | "element_string" ':' . "function" '(' '+' "integer" ')'
   59        | "element_string" ':' . "function" '(' '-' "integer" ')'

    "element_string"  shift, and go to state 41
    "function"        shift, and go to state 42


state 18

   71 elementId: "integer" '@' . "integer"

    "integer"  shift, and go to state 43


state 19

   70 elementId: "integer" ':' . "integer"
   72          | "integer" ':' . "function" '(' "integer" ')'
   73          | "integer" ':' . "function" '(' '+' "integer" ')'
   74          | "integer" ':' . "function" '(' '-' "integer" ')'

    "function"  shift, and go to state 44
    "integer"   shift, and go to state 45


state 20

    2 rule: destination "=" CONS_FLAG . exp "end of file"
    6 exp: . source
    7    | . '-' source
    8    | . marker
    9    | . '-' marker
   10    | . "integer"
   11    | . "double"
   12    | . '+' "integer"
   13    | . '+' "double"
   14    | . '-' "integer"
   15    | . '-' "double"
   16    | . "string"
   17    | . "variable_string"
   18    | . exp '+' exp
   19    | . exp '-' exp
   20    | . exp '*' exp
   21    | . exp '/' exp
   22    | . exp GE exp
   23    | . exp LE exp
   24    | . exp EQ exp
   25    | . exp NE exp
   26    | . exp GT exp
   27    | . exp LT exp
   28    | . '-' '(' exp ')'
   29    | . '(' exp ')'
   30    | . '-' "function" parameters ')'
   31    | . "function" parameters ')'
   37 source: . elements ']'
   38       | . elementsIds '}'
   43 marker: . markerElements MARKER_CLOSE
   44       | . markerElementsIds SMARKER_CLOSE
   45 elements: . '[' element
   46         | . '['
   47         | . elements ',' element
   48         | . elements ','
   49 markerElements: . MARKER_OPEN simpleElement
   50               | . MARKER_OPEN
   51               | . markerElements ',' simpleElement
   52               | . markerElements ','
   60 elementsIds: . '{' elementId
   61            | . '{'
   62            | . elementsIds ',' elementId
   63            | . elementsIds ','
   64 markerElementsIds: . SMARKER_OPEN simpleElementId
   65                  | . SMARKER_OPEN
   66                  | . markerElementsIds ',' simpleElementId
   67                  | . markerElementsIds ','

    MARKER_OPEN        shift, and go to state 22
    SMARKER_OPEN       shift, and go to state 23
    "string"           shift, and go to state 24
    "variable_string"  shift, and go to state 25
    "function"         shift, and go to state 26
    "integer"          shift, and go to state 27
    "double"           shift, and go to state 28
    '+'                shift, and go to state 29
    '-'                shift, and go to state 30
    '('                shift, and go to state 31
    '['                shift, and go to state 1
    '{'                shift, and go to state 2

    exp                go to state 46
    source             go to state 33
    marker             go to state 34
    elements           go to state 35
    markerElements     go to state 36
    elementsIds        go to state 37
    markerElementsIds  go to state 38


state 21

    3 rule: destination "=" BASE_FLAG . exp "end of file"
    4     | destination "=" BASE_FLAG . exp '@' markers "end of file"
    6 exp: . source
    7    | . '-' source
    8    | . marker
    9    | . '-' marker
   10    | . "integer"
   11    | . "double"
   12    | . '+' "integer"
   13    | . '+' "double"
   14    | . '-' "integer"
   15    | . '-' "double"
   16    | . "string"
   17    | . "variable_string"
   18    | . exp '+' exp
   19    | . exp '-' exp
   20    | . exp '*' exp
   21    | . exp '/' exp
   22    | . exp GE exp
   23    | . exp LE exp
   24    | . exp EQ exp
   25    | . exp NE exp
   26    | . exp GT exp
   27    | . exp LT exp
   28    | . '-' '(' exp ')'
   29    | . '(' exp ')'
   30    | . '-' "function" parameters ')'
   31    | . "function" parameters ')'
   37 source: . elements ']'
   38       | . elementsIds '}'
   43 marker: . markerElements MARKER_CLOSE
   44       | . markerElementsIds SMARKER_CLOSE
   45 elements: . '[' element
   46         | . '['
   47         | . elements ',' element
   48         | . elements ','
   49 markerElements: . MARKER_OPEN simpleElement
   50               | . MARKER_OPEN
   51               | . markerElements ',' simpleElement
   52               | . markerElements ','
   60 elementsIds: . '{' elementId
   61            | . '{'
   62            | . elementsIds ',' elementId
   63            | . elementsIds ','
   64 markerElementsIds: . SMARKER_OPEN simpleElementId
   65                  | . SMARKER_OPEN
   66                  | . markerElementsIds ',' simpleElementId
   67                  | . markerElementsIds ','

    MARKER_OPEN        shift, and go to state 22
    SMARKER_OPEN       shift, and go to state 23
    "string"           shift, and go to state 24
    "variable_string"  shift, and go to state 25
    "function"         shift, and go to state 26
    "integer"          shift, and go to state 27
    "double"           shift, and go to state 28
    '+'                shift, and go to state 29
    '-'                shift, and go to state 30
    '('                shift, and go to state 31
    '['                shift, and go to state 1
    '{'                shift, and go to state 2

    exp                go to state 47
    source             go to state 33
    marker             go to state 34
    elements           go to state 35
    markerElements     go to state 36
    elementsIds        go to state 37
    markerElementsIds  go to state 38


state 22

   49 markerElements: MARKER_OPEN . simpleElement
   50               | MARKER_OPEN .  [MARKER_CLOSE, ',']
   53 simpleElement: . "element_string"
   54              | . "element_string" ':' "element_string"

    "element_string"  shift, and go to state 48

    $default  reduce using rule 50 (markerElements)

    simpleElement  go to state 49


state 23

   64 markerElementsIds: SMARKER_OPEN . simpleElementId
   65                  | SMARKER_OPEN .  [SMARKER_CLOSE, ',']
   68 simpleElementId: . "integer" ':' "integer"
   69                | . "integer" '@' "integer"

    "integer"  shift, and go to state 50

    $default  reduce using rule 65 (markerElementsIds)

    simpleElementId  go to state 51


state 24

   16 exp: "string" .

    $default  reduce using rule 16 (exp)


state 25

   17 exp: "variable_string" .

    $default  reduce using rule 17 (exp)


state 26

   31 exp: "function" . parameters ')'
   32 parameters: . '(' exp
   33           | . '('
   34           | . parameters ',' exp

    '('  shift, and go to state 52

    parameters  go to state 53


state 27

   10 exp: "integer" .

    $default  reduce using rule 10 (exp)


state 28

   11 exp: "double" .

    $default  reduce using rule 11 (exp)


state 29

   12 exp: '+' . "integer"
   13    | '+' . "double"

    "integer"  shift, and go to state 54
    "double"   shift, and go to state 55


state 30

    7 exp: '-' . source
    9    | '-' . marker
   14    | '-' . "integer"
   15    | '-' . "double"
   28    | '-' . '(' exp ')'
   30    | '-' . "function" parameters ')'
   37 source: . elements ']'
   38       | . elementsIds '}'
   43 marker: . markerElements MARKER_CLOSE
   44       | . markerElementsIds SMARKER_CLOSE
   45 elements: . '[' element
   46         | . '['
   47         | . elements ',' element
   48         | . elements ','
   49 markerElements: . MARKER_OPEN simpleElement
   50               | . MARKER_OPEN
   51               | . markerElements ',' simpleElement
   52               | . markerElements ','
   60 elementsIds: . '{' elementId
   61            | . '{'
   62            | . elementsIds ',' elementId
   63            | . elementsIds ','
   64 markerElementsIds: . SMARKER_OPEN simpleElementId
   65                  | . SMARKER_OPEN
   66                  | . markerElementsIds ',' simpleElementId
   67                  | . markerElementsIds ','

    MARKER_OPEN   shift, and go to state 22
    SMARKER_OPEN  shift, and go to state 23
    "function"    shift, and go to state 56
    "integer"     shift, and go to state 57
    "double"      shift, and go to state 58
    '('           shift, and go to state 59
    '['           shift, and go to state 1
    '{'           shift, and go to state 2

    source             go to state 60
    marker             go to state 61
    elements           go to state 35
    markerElements     go to state 36
    elementsIds        go to state 37
    markerElementsIds  go to state 38


state 31

    6 exp: . source
    7    | . '-' source
    8    | . marker
    9    | . '-' marker
   10    | . "integer"
   11    | . "double"
   12    | . '+' "integer"
   13    | . '+' "double"
   14    | . '-' "integer"
   15    | . '-' "double"
   16    | . "string"
   17    | . "variable_string"
   18    | . exp '+' exp
   19    | . exp '-' exp
   20    | . exp '*' exp
   21    | . exp '/' exp
   22    | . exp GE exp
   23    | . exp LE exp
   24    | . exp EQ exp
   25    | . exp NE exp
   26    | . exp GT exp
   27    | . exp LT exp
   28    | . '-' '(' exp ')'
   29    | . '(' exp ')'
   29    | '(' . exp ')'
   30    | . '-' "function" parameters ')'
   31    | . "function" parameters ')'
   37 source: . elements ']'
   38       | . elementsIds '}'
   43 marker: . markerElements MARKER_CLOSE
   44       | . markerElementsIds SMARKER_CLOSE
   45 elements: . '[' element
   46         | . '['
   47         | . elements ',' element
   48         | . elements ','
   49 markerElements: . MARKER_OPEN simpleElement
   50               | . MARKER_OPEN
   51               | . markerElements ',' simpleElement
   52               | . markerElements ','
   60 elementsIds: . '{' elementId
   61            | . '{'
   62            | . elementsIds ',' elementId
   63            | . elementsIds ','
   64 markerElementsIds: . SMARKER_OPEN simpleElementId
   65                  | . SMARKER_OPEN
   66                  | . markerElementsIds ',' simpleElementId
   67                  | . markerElementsIds ','

    MARKER_OPEN        shift, and go to state 22
    SMARKER_OPEN       shift, and go to state 23
    "string"           shift, and go to state 24
    "variable_string"  shift, and go to state 25
    "function"         shift, and go to state 26
    "integer"          shift, and go to state 27
    "double"           shift, and go to state 28
    '+'                shift, and go to state 29
    '-'                shift, and go to state 30
    '('                shift, and go to state 31
    '['                shift, and go to state 1
    '{'                shift, and go to state 2

    exp                go to state 62
    source             go to state 33
    marker             go to state 34
    elements           go to state 35
    markerElements     go to state 36
    elementsIds        go to state 37
    markerElementsIds  go to state 38


state 32

    1 rule: destination "=" exp . "end of file"
    5     | destination "=" exp . '@' markers "end of file"
   18 exp: exp . '+' exp
   19    | exp . '-' exp
   20    | exp . '*' exp
   21    | exp . '/' exp
   22    | exp . GE exp
   23    | exp . LE exp
   24    | exp . EQ exp
   25    | exp . NE exp
   26    | exp . GT exp
   27    | exp . LT exp

    "end of file"  shift, and go to state 63
    GE             shift, and go to state 64
    LE             shift, and go to state 65
    EQ             shift, and go to state 66
    NE             shift, and go to state 67
    GT             shift, and go to state 68
    LT             shift, and go to state 69
    '@'            shift, and go to state 70
    '+'            shift, and go to state 71
    '-'            shift, and go to state 72
    '*'            shift, and go to state 73
    '/'            shift, and go to state 74


state 33

    6 exp: source .

    $default  reduce using rule 6 (exp)


state 34

    8 exp: marker .

    $default  reduce using rule 8 (exp)


state 35

   37 source: elements . ']'
   47 elements: elements . ',' element
   48         | elements . ','

    ','  shift, and go to state 13
    ']'  shift, and go to state 75


state 36

   43 marker: markerElements . MARKER_CLOSE
   51 markerElements: markerElements . ',' simpleElement
   52               | markerElements . ','

    MARKER_CLOSE  shift, and go to state 76
    ','           shift, and go to state 77


state 37

   38 source: elementsIds . '}'
   62 elementsIds: elementsIds . ',' elementId
   63            | elementsIds . ','

    ','  shift, and go to state 15
    '}'  shift, and go to state 78


state 38

   44 marker: markerElementsIds . SMARKER_CLOSE
   66 markerElementsIds: markerElementsIds . ',' simpleElementId
   67                  | markerElementsIds . ','

    SMARKER_CLOSE  shift, and go to state 79
    ','            shift, and go to state 80


state 39

   47 elements: elements ',' element .

    $default  reduce using rule 47 (elements)


state 40

   62 elementsIds: elementsIds ',' elementId .

    $default  reduce using rule 62 (elementsIds)


state 41

   56 element: "element_string" ':' "element_string" .

    $default  reduce using rule 56 (element)


state 42

   57 element: "element_string" ':' "function" . '(' "integer" ')'
   58        | "element_string" ':' "function" . '(' '+' "integer" ')'
   59        | "element_string" ':' "function" . '(' '-' "integer" ')'

    '('  shift, and go to state 81


state 43

   71 elementId: "integer" '@' "integer" .

    $default  reduce using rule 71 (elementId)


state 44

   72 elementId: "integer" ':' "function" . '(' "integer" ')'
   73          | "integer" ':' "function" . '(' '+' "integer" ')'
   74          | "integer" ':' "function" . '(' '-' "integer" ')'

    '('  shift, and go to state 82


state 45

   70 elementId: "integer" ':' "integer" .

    $default  reduce using rule 70 (elementId)


state 46

    2 rule: destination "=" CONS_FLAG exp . "end of file"
   18 exp: exp . '+' exp
   19    | exp . '-' exp
   20    | exp . '*' exp
   21    | exp . '/' exp
   22    | exp . GE exp
   23    | exp . LE exp
   24    | exp . EQ exp
   25    | exp . NE exp
   26    | exp . GT exp
   27    | exp . LT exp

    "end of file"  shift, and go to state 83
    GE             shift, and go to state 64
    LE             shift, and go to state 65
    EQ             shift, and go to state 66
    NE             shift, and go to state 67
    GT             shift, and go to state 68
    LT             shift, and go to state 69
    '+'            shift, and go to state 71
    '-'            shift, and go to state 72
    '*'            shift, and go to state 73
    '/'            shift, and go to state 74


state 47

    3 rule: destination "=" BASE_FLAG exp . "end of file"
    4     | destination "=" BASE_FLAG exp . '@' markers "end of file"
   18 exp: exp . '+' exp
   19    | exp . '-' exp
   20    | exp . '*' exp
   21    | exp . '/' exp
   22    | exp . GE exp
   23    | exp . LE exp
   24    | exp . EQ exp
   25    | exp . NE exp
   26    | exp . GT exp
   27    | exp . LT exp

    "end of file"  shift, and go to state 84
    GE             shift, and go to state 64
    LE             shift, and go to state 65
    EQ             shift, and go to state 66
    NE             shift, and go to state 67
    GT             shift, and go to state 68
    LT             shift, and go to state 69
    '@'            shift, and go to state 85
    '+'            shift, and go to state 71
    '-'            shift, and go to state 72
    '*'            shift, and go to state 73
    '/'            shift, and go to state 74


state 48

   53 simpleElement: "element_string" .  [MARKER_CLOSE, ',']
   54              | "element_string" . ':' "element_string"

    ':'  shift, and go to state 86

    $default  reduce using rule 53 (simpleElement)


state 49

   49 markerElements: MARKER_OPEN simpleElement .

    $default  reduce using rule 49 (markerElements)


state 50

   68 simpleElementId: "integer" . ':' "integer"
   69                | "integer" . '@' "integer"

    '@'  shift, and go to state 87
    ':'  shift, and go to state 88


state 51

   64 markerElementsIds: SMARKER_OPEN simpleElementId .

    $default  reduce using rule 64 (markerElementsIds)


state 52

    6 exp: . source
    7    | . '-' source
    8    | . marker
    9    | . '-' marker
   10    | . "integer"
   11    | . "double"
   12    | . '+' "integer"
   13    | . '+' "double"
   14    | . '-' "integer"
   15    | . '-' "double"
   16    | . "string"
   17    | . "variable_string"
   18    | . exp '+' exp
   19    | . exp '-' exp
   20    | . exp '*' exp
   21    | . exp '/' exp
   22    | . exp GE exp
   23    | . exp LE exp
   24    | . exp EQ exp
   25    | . exp NE exp
   26    | . exp GT exp
   27    | . exp LT exp
   28    | . '-' '(' exp ')'
   29    | . '(' exp ')'
   30    | . '-' "function" parameters ')'
   31    | . "function" parameters ')'
   32 parameters: '(' . exp
   33           | '(' .  [')', ',']
   37 source: . elements ']'
   38       | . elementsIds '}'
   43 marker: . markerElements MARKER_CLOSE
   44       | . markerElementsIds SMARKER_CLOSE
   45 elements: . '[' element
   46         | . '['
   47         | . elements ',' element
   48         | . elements ','
   49 markerElements: . MARKER_OPEN simpleElement
   50               | . MARKER_OPEN
   51               | . markerElements ',' simpleElement
   52               | . markerElements ','
   60 elementsIds: . '{' elementId
   61            | . '{'
   62            | . elementsIds ',' elementId
   63            | . elementsIds ','
   64 markerElementsIds: . SMARKER_OPEN simpleElementId
   65                  | . SMARKER_OPEN
   66                  | . markerElementsIds ',' simpleElementId
   67                  | . markerElementsIds ','

    MARKER_OPEN        shift, and go to state 22
    SMARKER_OPEN       shift, and go to state 23
    "string"           shift, and go to state 24
    "variable_string"  shift, and go to state 25
    "function"         shift, and go to state 26
    "integer"          shift, and go to state 27
    "double"           shift, and go to state 28
    '+'                shift, and go to state 29
    '-'                shift, and go to state 30
    '('                shift, and go to state 31
    '['                shift, and go to state 1
    '{'                shift, and go to state 2

    $default  reduce using rule 33 (parameters)

    exp                go to state 89
    source             go to state 33
    marker             go to state 34
    elements           go to state 35
    markerElements     go to state 36
    elementsIds        go to state 37
    markerElementsIds  go to state 38


state 53

   31 exp: "function" parameters . ')'
   34 parameters: parameters . ',' exp

    ')'  shift, and go to state 90
    ','  shift, and go to state 91


state 54

   12 exp: '+' "integer" .

    $default  reduce using rule 12 (exp)


state 55

   13 exp: '+' "double" .

    $default  reduce using rule 13 (exp)


state 56

   30 exp: '-' "function" . parameters ')'
   32 parameters: . '(' exp
   33           | . '('
   34           | . parameters ',' exp

    '('  shift, and go to state 52

    parameters  go to state 92


state 57

   14 exp: '-' "integer" .

    $default  reduce using rule 14 (exp)


state 58

   15 exp: '-' "double" .

    $default  reduce using rule 15 (exp)


state 59

    6 exp: . source
    7    | . '-' source
    8    | . marker
    9    | . '-' marker
   10    | . "integer"
   11    | . "double"
   12    | . '+' "integer"
   13    | . '+' "double"
   14    | . '-' "integer"
   15    | . '-' "double"
   16    | . "string"
   17    | . "variable_string"
   18    | . exp '+' exp
   19    | . exp '-' exp
   20    | . exp '*' exp
   21    | . exp '/' exp
   22    | . exp GE exp
   23    | . exp LE exp
   24    | . exp EQ exp
   25    | . exp NE exp
   26    | . exp GT exp
   27    | . exp LT exp
   28    | . '-' '(' exp ')'
   28    | '-' '(' . exp ')'
   29    | . '(' exp ')'
   30    | . '-' "function" parameters ')'
   31    | . "function" parameters ')'
   37 source: . elements ']'
   38       | . elementsIds '}'
   43 marker: . markerElements MARKER_CLOSE
   44       | . markerElementsIds SMARKER_CLOSE
   45 elements: . '[' element
   46         | . '['
   47         | . elements ',' element
   48         | . elements ','
   49 markerElements: . MARKER_OPEN simpleElement
   50               | . MARKER_OPEN
   51               | . markerElements ',' simpleElement
   52               | . markerElements ','
   60 elementsIds: . '{' elementId
   61            | . '{'
   62            | . elementsIds ',' elementId
   63            | . elementsIds ','
   64 markerElementsIds: . SMARKER_OPEN simpleElementId
   65                  | . SMARKER_OPEN
   66                  | . markerElementsIds ',' simpleElementId
   67                  | . markerElementsIds ','

    MARKER_OPEN        shift, and go to state 22
    SMARKER_OPEN       shift, and go to state 23
    "string"           shift, and go to state 24
    "variable_string"  shift, and go to state 25
    "function"         shift, and go to state 26
    "integer"          shift, and go to state 27
    "double"           shift, and go to state 28
    '+'                shift, and go to state 29
    '-'                shift, and go to state 30
    '('                shift, and go to state 31
    '['                shift, and go to state 1
    '{'                shift, and go to state 2

    exp                go to state 93
    source             go to state 33
    marker             go to state 34
    elements           go to state 35
    markerElements     go to state 36
    elementsIds        go to state 37
    markerElementsIds  go to state 38


state 60

    7 exp: '-' source .

    $default  reduce using rule 7 (exp)


state 61

    9 exp: '-' marker .

    $default  reduce using rule 9 (exp)


state 62

   18 exp: exp . '+' exp
   19    | exp . '-' exp
   20    | exp . '*' exp
   21    | exp . '/' exp
   22    | exp . GE exp
   23    | exp . LE exp
   24    | exp . EQ exp
   25    | exp . NE exp
   26    | exp . GT exp
   27    | exp . LT exp
   29    | '(' exp . ')'

    GE   shift, and go to state 64
    LE   shift, and go to state 65
    EQ   shift, and go to state 66
    NE   shift, and go to state 67
    GT   shift, and go to state 68
    LT   shift, and go to state 69
    '+'  shift, and go to state 71
    '-'  shift, and go to state 72
    '*'  shift, and go to state 73
    '/'  shift, and go to state 74
    ')'  shift, and go to state 94


state 63

    1 rule: destination "=" exp "end of file" .

    $default  reduce using rule 1 (rule)


state 64
